syntax = "proto3";
package pb; // = protocol buff por padrÃ£o
option go_package = "internal/pb"; //cria uma pasta

message Category{
  string id = 1;
  string name = 2;
  string description = 3;
}

message CreateCategoryRequest{
  string name = 1;
  string description = 2;
}

message CategoryResponse{
  Category Category = 1;
}

service CategoryService{
  rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse){}

}
/* Comando para gerar -> protoc --go_out=. --go-grpc_out=. proto/course_category.proto*/